--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,71 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      Insumo 1 Aporte 5 :D
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="6" size-md="4" size-lg="3" class="position-relative">
+        <ion-img *ngIf="bathroomState"
+          src="https://i.pinimg.com/originals/4d/77/07/4d770760d733a47466ae6fa59f6f3925.jpg" class="v"></ion-img>
+        <ion-img *ngIf="!bathroomState"
+          src="https://th.bing.com/th/id/OIP.tXnhjskb18J5h5Z0oRWQGQHaHa?rs=1&pid=ImgDetMain" class="v"></ion-img>
+        <ion-img
+          src="https://media.istockphoto.com/vectors/bathroom-interior-with-toilet-bowl-vector-id1133321333?k=20&m=1133321333&s=612x612&w=0&h=heSGyOnY2TxZkdhn6IfMTwwrPosYBR71clOhhGVWej8=" class="img"></ion-img>
+        <ion-icon name="bulb" (click)="toggleBathroomState()"
+          [ngStyle]="{ color: bathroomState ? 'green' : 'red' }"></ion-icon>
+      </ion-col>
+      <ion-col size="6" size-md="4" size-lg="3" class="position-relative">
+        <ion-img *ngIf="coState"
+          src="https://i.pinimg.com/originals/4d/77/07/4d770760d733a47466ae6fa59f6f3925.jpg" class="v"></ion-img>
+        <ion-img *ngIf="!coState"
+          src="https://th.bing.com/th/id/OIP.tXnhjskb18J5h5Z0oRWQGQHaHa?rs=1&pid=ImgDetMain" class="v"></ion-img>
+        <ion-img
+          src="https://image.freepik.com/vector-gratis/vector-ilustracion-dibujos-animados-interior-cocina_1441-495.jpg" class="img"></ion-img>
+        <ion-icon name="bulb" (click)="toggleKitchenState()"
+          [ngStyle]="{ color: coState ? 'green' : 'red' }"></ion-icon>
+      </ion-col>
+      <ion-col size="6" size-md="4" size-lg="3" class="position-relative">
+        <ion-img *ngIf="dorState"
+          src="https://i.pinimg.com/originals/4d/77/07/4d770760d733a47466ae6fa59f6f3925.jpg" class="v"></ion-img>
+        <ion-img *ngIf="!dorState"
+          src="https://th.bing.com/th/id/OIP.tXnhjskb18J5h5Z0oRWQGQHaHa?rs=1&pid=ImgDetMain" class="v"></ion-img>
+        <ion-img
+          src="https://static.vecteezy.com/system/resources/previews/008/544/947/non_2x/room-interior-background-illustration-bedroom-cartoon-living-room-kids-bedroom-with-furniture-teenage-room-with-bed-kid-or-child-room-with-toys-and-pictures-free-vector.jpg" class="img"></ion-img>
+        <ion-icon name="bulb" (click)="toggleRoomState()" [ngStyle]="{ color: dorState ? 'green' : 'red' }"></ion-icon>
+      </ion-col>
+      <ion-col size="6" size-md="4" size-lg="3" class="position-relative">
+        <ion-img *ngIf="gaState"
+          src="https://i.pinimg.com/originals/4d/77/07/4d770760d733a47466ae6fa59f6f3925.jpg" class="v"></ion-img>
+        <ion-img *ngIf="!gaState"
+          src="https://th.bing.com/th/id/OIP.tXnhjskb18J5h5Z0oRWQGQHaHa?rs=1&pid=ImgDetMain" class="v"></ion-img>
+        <ion-img src="https://image.freepik.com/vector-gratis/garaje-coches-racing-interior_82689-23.jpg" class="img"></ion-img>
+        <ion-icon name="bulb" (click)="toggleGarageState()" [ngStyle]="{ color: gaState ? 'green' : 'red' }"></ion-icon>
+      </ion-col>
+      <ion-col size="6" size-md="4" size-lg="3" class="position-relative">
+        <ion-img *ngIf="paState"
+          src="https://i.pinimg.com/originals/4d/77/07/4d770760d733a47466ae6fa59f6f3925.jpg" class="v"></ion-img>
+        <ion-img *ngIf="!paState"
+          src="https://th.bing.com/th/id/OIP.tXnhjskb18J5h5Z0oRWQGQHaHa?rs=1&pid=ImgDetMain" class="v"></ion-img>
+        <ion-img
+          src="https://img.freepik.com/vector-premium/area-patio-mesa-sillas-dibujos-animados-patio-soleado-cesped-verde-patio-trasero-dibujos-animados-al-aire-libre_87946-1799.jpg?w=2000" class="img"></ion-img>
+        <ion-icon name="bulb" (click)="togglePState()" [ngStyle]="{ color: paState ? 'green' : 'red' }"></ion-icon>
+      </ion-col>
+      <ion-col size="6" size-md="4" size-lg="3" class="position-relative">
+        <ion-img *ngIf="saState"
+          src="https://i.pinimg.com/originals/4d/77/07/4d770760d733a47466ae6fa59f6f3925.jpg" class="v"></ion-img>
+        <ion-img *ngIf="!saState"
+          src="https://th.bing.com/th/id/OIP.tXnhjskb18J5h5Z0oRWQGQHaHa?rs=1&pid=ImgDetMain" class="v"></ion-img>
+        <ion-img
+          src="https://image.freepik.com/vector-gratis/ilustracion-vectorial-de-un-acogedor-interior-de-dibujos-animados-de-una-sala-de-estar-una-sala-de-estar_1441-387.jpg" class="img"></ion-img>
+        <ion-icon name="bulb" (click)="toggleLivingState()" [ngStyle]="{ color: saState ? 'green' : 'red' }"></ion-icon>
+      </ion-col>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+
+    </ion-row>
+  </ion-grid>
 </ion-content>
