--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,33 @@
-#container {
-  text-align: center;
+ion-icon{
+  font-size: 300%;
+}
+ion-col{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
+.v{
+  width: 100px;
+  height: 100px;
   position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+  top: 50px;
+  left: 50px;
+  
+  object-fit: cover; 
+  z-index: 1; 
+  
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+.position-relative {
+  position: relative;
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
 
-  color: #8c8c8c;
 
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
+.img {
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+  z-index: 0;
 }
